# ghcnd-helper

./: .gitignore  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
doc/: README.md  _config.yml
doc/_posts/: 2025-02-27-welcome-to-jekyll.markdown
src/: config.py  constants.py  debug.py  ghcnd_config.py  ghcnh_fetch.py  make_daily_summary_schema.py  polar_extract_pressure_slice.py  pressure.ipynb  process_station_csv.py  qualify_stations.py  read_daily_summary_gz.py  read_ghcnd_stationlist_file.py  read_hourly_stationlist_file.py  read_pressure_slice.py  read_stationlist_file.py
src/analysis/: compute_singletons.py  read_parquet_file.py
src/ghcnd/: README.md  constants.py  ghcnd_config.py  make_daily_summary_schema.py  process_station_csv.py  read_daily_summary_gz.py  read_ghcnd_stationlist_file.py
src/ghcnd/analysis/: compute_singletons.py  read_parquet_file.py
