[tool.poetry]
name = "ghcnd_helper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
notebook = "^7.2.1"
polars = "^1.21.0"
matplotlib = "^3.9.2"
line-profiler-pycharm = "^1.2.0"
altair = "^5.5.0"
plotly = "^6.0.0"
# kaleido publish is messed up, hence version lock.
# https://github.com/plotly/Kaleido/issues/176
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
